It compiles!